# fogcomputing_prototyping

./: .editorconfig  .gitignore  Cargo.toml  README.md  build.rs  docker-compose.yml  pom.xml
.github/workflows/: rust.yml
client/: Dockerfile  docker-compose.yml  pom.xml
client/src/main/java/fogcomputing/client/: ApacheConnector.java  ClientProperties.java  EventScheduler.java  GrpcSensorClient.java  IdentityTransmissionImpl.java  Startup.java  VolcanoSensor.java
common/: pom.xml
common/src/main/java/fogcomputing/util/: ChecksumUtils.java  ConfigUtils.java  GrpcToCsvLogger.java  GrpcToSqliteLogger.java  PropertyUtils.java  ReflectionUtils.java  Triple.java  Tuple.java  UuidUtils.java
data/: 2019-11-7-BH2.csv  2019-11-7-BHZ.csv
deployment/: deploy-server.sh  docker-compose.yml  install-docker.sh  spinup-gcp.sh  stop-server.sh  teardown-gcp.sh
grpc/: Cargo.toml
grpc/proto/: sensor.proto
grpc/src/: lib.rs
proto/: pom.xml  sensor.proto
proto/src/main/protobuf/: sensor.proto
protogen/: Cargo.toml
protogen/proto/: sensor.proto
protogen/src/: main.rs
sensor-data/: 2019-11-7-BH1.csv
server/: Dockerfile  docker-compose.yml  pom.xml
server/src/main/java/fogcomputing/server/: DebugEventImpl.java  EventHandlerImpl.java  SensorGRPCServer.java
src/: client.rs  grpc.rs  lib.rs  sensor.rs  server.rs  timeout.rs
src/sensor/: sensor.rs
tests/: sensor_integration_test.rs
