[package]
name = "prototyping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "sensor"
path = "src/sensor.rs"

[dependencies]
grpc = { path = "grpc" }
tonic = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.1", features = ["v1", "v5"] }

[dev-dependencies]
futures-util = "0.3"
